--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <title>Karan Mhatre - Product Designer, Berlin</title>
 </head>
@@ -26,8 +26,8 @@
         
 <section id="hero">
     <div class="content">
-        <h2>I help companies design robust digital products, with an emphasis on good UX Design.</h2>
-        <p>I&#39;m a Berlin-based Product Designer with 9 years of experience, currently working as a Lead Product Designer at BYJUS (India&#39;s Largest EduTech Startup).</p>
+        <h2>Hello, I'm a Berlin based product designer.</h2>
+        <p>I have 9 years of experience working with digital products, and I'm currently working as a Lead Product Designer at Byjus.</p>
         <a href="/about">More about me</a>
     </div>
     <!-- <div class="image">
@@ -47,9 +47,22 @@
         </div>
         <div class="content">
             <p class="year">2020 - End to end design - Freelancing</p>
-            <h3>End-to-end designs for a New-Age HR Solution</h3>
+            <h3><a href="/the-new-age-hr-solution/">End-to-end designs for a New-Age HR Solution</a></h3>
             <p>I designed a HR Solution from ground-up with 2 co-founders. I was the sole designer on the project.</p>
             <a href="/the-new-age-hr-solution/">Read more</a>
+        </div>
+    </div>
+    <div class="project">
+        <div class="project-image">
+            <a href="/designing-live-health-and-fitness-classes/">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640117993/play-thumbnail_tbf4ly.png" alt="Video Conf Thumbnail">
+            </a>
+        </div>
+        <div class="content">
+            <p class="year">2017 - UX Design - GOQii</p>
+            <h3><a href="/designing-live-health-and-fitness-classes/">Delivering Live Health and Fitness Classes</a></h3>
+            <p>Designed and launched a Live Health and Fitness platform on GOQii Play and grew it to over 1M+ users over 1 year.</p>
+            <a href="/designing-live-health-and-fitness-classes/">Read more</a>
         </div>
     </div>
     <div class="project">
@@ -60,24 +73,13 @@
         </div>
         <div class="content">
             <p class="year">2021 - UX Design - WhiteHatJR (Now Byjus)</p>
-            <h3>Helping teachers effectively manage more students in a class</h3>
+            <h3><a href="/improved-video-classroom/">Helping teachers effectively manage more students in a class</a></h3>
             <p>Designed and launched a product that helped teachers manage 4-6 students in an online classroom.</p>
             <a href="/improved-video-classroom/">Read more</a>
         </div>
     </div>
-    <div class="project">
-        <div class="project-image">
-            <a href="/designing-live-health-and-fitness-classes/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640117993/play-thumbnail_tbf4ly.png" alt="Video Conf Thumbnail">
-            </a>
-        </div>
-        <div class="content">
-            <p class="year">2018 - UX Design - GOQii</p>
-            <h3>Delivering Live Health and Fitness Classes</h3>
-            <p>Designed and launched a Live Health and Fitness platform on GOQii Play and grew it to over 1M+ users over 1 year.</p>
-            <a href="/designing-live-health-and-fitness-classes/">Read more</a>
-        </div>
-    </div>
+</section>
+<section id="portfolioSecondary">
     <div class="project">
         <div class="project-image">
             <a href="/gamification-revolution-in-childrens-learning/">
@@ -86,13 +88,11 @@
         </div>
         <div class="content">
             <p class="year">2021 - UX Design and Illustrations - WhiteHatJR (Now Byjus)</p>
-            <h3>Gamification Revolution in Children’s Learning</h3>
+            <h3><a href="/gamification-revolution-in-childrens-learning/">Gamification Revolution in Children’s Learning</a></h3>
             <p>WhiteHatJR is a platform where children learn how to code. We wanted the children to have fun while learning.</p>
             <a href="/gamification-revolution-in-childrens-learning/">Read more</a>
         </div>
     </div>
-</section>
-<section id="portfolioSecondary">
     <div class="project">
         <div class="project-image">
             <a href="/understanding-the-patient-journey/">
@@ -101,12 +101,12 @@
         </div>
         <div class="content">
             <p class="year">2015 - User Research - Practo</p>
-            <h3>Understanding and improve Patient behavior when choosing a hospital</h3>
+            <h3><a href="/understanding-the-patient-journey/">Understanding Patient behavior when choosing a hospital</a></h3>
             <p>In 2015, I conducted user research to build that a product that helps patients find the right hospital to meet their needs.</p>
             <a href="/understanding-the-patient-journey/">Read more</a>
         </div>
     </div>
-    <div class="project">
+    <!-- <div class="project">
         <div class="project-image">
             <a href="/building-goqii-india-health-quiz/">
                 <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501696/Frame_48095740_yntw3s.png" alt="GOQii Thumbnail">
@@ -118,7 +118,7 @@
             <p>The idea was to use the popular Live Quiz format to bust health-related myths and make Indians more aware of healthy habits.</p>
             <a href="/building-goqii-india-health-quiz/">Read more</a>
         </div>
-    </div>
+    </div> -->
 </section>
     </main>
     <footer>
