--- a/the-new-age-hr-solution/index.html
+++ b/the-new-age-hr-solution/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <title>The New Age HR Solution</title>
 </head>
@@ -30,7 +30,7 @@
         <h2>End-to-end designs for a New-Age HR Solution</h2>
     </div>
     <div class="image-container">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638368340/hr-hero-image_q1kbhc.png" alt="">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640248369/Frame_48095759_exd8gl.png" alt="">
     </div>
 </section>
 <section class="content-section">
@@ -45,7 +45,7 @@
     </ul>
     <p>I was part of a 5 member team, insisting of 2 co-founders with HR domain knowledge, and 2 developers. I was the sole designer on the project. </p>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638785182/hr-team_qmdoeq.png" alt="">
         <span>The Team</span>
     </div>
@@ -76,7 +76,7 @@
     <p>The user was a 20-45 year old MNC employee. Their aspirations were to do their job better, get promoted, and be admired by their managers and peers.</p>
     <p>To achieve these aspirations, they needed to understand how to improve, be guided, and to be educated in soft-skills like negotiation, and conflict resolution.</p>
     <p>The user was motivated to do this by their aspirations, peer pressure, and support from their manager.</p>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639756012/persona_a5jifl.png" alt="User Persona">
         <span>User Persona</span>
     </div>
@@ -91,7 +91,7 @@
         <li>Explain my complete UX process</li>
         <li>Create a Project Plan and Timelines</li>
     </ul>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638782306/hr-image-10_jre5qk.png" 
         alt="">
         <span>Kick-off Meeting Agenda and Questions</span>
@@ -108,7 +108,7 @@
     <h2>User Flows and Information Architecture</h2>
     <p>The product started with very open-ended brainstorming of the problem statement. We added ideas, solutions, and inspirations into a board.</p>
     <p>I then used this board to illustrate the vision for the product in terms of user flows. Below I've shown an Overall User Flow, as well as one of Onboarding and Assessments as samples. I completed the user flows over one week.</p>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638783816/hr-user-flow_isrvsf.png" alt="">
         <span>User Flows</span>
     </div>
@@ -127,17 +127,17 @@
     <p>We started by creating a broad framework for the home page that adapted as the user went through the various stages of the program.</p>
     <p>Each section had it propose that was clearly defined so that the section was not misused in the future and the user knew what to expect always.</p>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638784413/wf-op-1_rr98hd.png" alt="">
         <span>Overall framework - 1</span>
     </div>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638784413/wf-op-3_q2k9yn.png" alt="">
         <span>Overall framework - 2</span>
     </div>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638784413/wf-op-2_sv65il.png" alt="">
         <span>Overall framework - 3</span>
     </div>
@@ -149,7 +149,7 @@
         <li>Using a two column layout to manage tasks and helpful information worked well because tasks were short and didn't need the full width.</li>
     </ul>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639755383/interaction_model_ict1b8.png" alt="">
         <span>Dashboard Interaction Model</span>
     </div>
@@ -203,7 +203,7 @@
     <p>I wanted to make sure right from the start that there was maximum reusability of components and consistency in the UI wherever possible.</p>
     <p>I made sure that minimal number of new components we added on as we tackled each usecase.</p>
     <p>I made full use of Figma’s Component building capabilities to ensure that any designer could build on this system in the future and use existing components with ease.</p>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/c_scale,w_2400/v1624283754/Website/Case%20Studies/Bloom/components_irhxqz.png" alt="">
         <span>Components and States</span>
     </div>
@@ -231,7 +231,7 @@
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638810325/post_kopjdj.png" alt="">
         <span>Learning Community</span>
     </div>
-    <div class="image-container">
+    <div class="image-container-small">
         <video src="https://res.cloudinary.com/dgksx9vlc/video/upload/v1624288683/Website/Case%20Studies/Bloom/eubrics-interactions_qfgqja.mp4" muted autoplay loop></video>
         <span>Micro Interactions</span>
     </div>
