--- a/about/index.html
+++ b/about/index.html
@@ -55,7 +55,7 @@
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639502172/ezgif.com-gif-maker_5_r79ucr.gif" alt="Hero Image">
     </div>
     <div class="content">
-        <h2>Hi, I'm Karan, and I've been working with digital products for the past 10 years.</h2>
+        <h2>Hello, I'm a product designer that is passionate about crafting products that have a positive impact on society.</h2>
     </div>
 </section>
 <!-- 
