--- a/about/index.html
+++ b/about/index.html
@@ -50,14 +50,23 @@
     
 </script>
 
-<section id="hero">
+
+<section id="creative-coding" class="container-med">
+    <h2>I am a versitile product designer that is passionate about crafting products that have a positive impact on society.</h2>
+    <!-- <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional. Click the projects to look at the code and other variations I've created using similar techniques.</p> -->
+</section>
+
+<!-- <section id="hero">
     <div class="image">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639502172/ezgif.com-gif-maker_5_r79ucr.gif" alt="Hero Image">
     </div>
-    <div class="content">
-        <h2>Hello, I'm a product designer that is passionate about crafting products that have a positive impact on society.</h2>
+    <div class="image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639493972/ezgif.com-gif-maker_4_lnz9fe.gif" alt="Hero Image">
     </div>
-</section>
+    <div class="content">
+        <h3>Hello, I'm a product designer that is passionate about crafting products that have a positive impact on society.</h3>
+    </div>
+</section> -->
 <!-- 
 <section id="creative-coding" class="container-small">
     <h2>Hi, I'm Karan, and I've been working with digital products for the past 10 years.</h2>
