--- a/index.html
+++ b/index.html
@@ -33,16 +33,20 @@
     <!-- <div class="image">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638201611/hero-image_swszmw.png" alt="Hero Image">
     </div> -->
-    <div class="image">
+    <!-- <div class="image">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639493972/ezgif.com-gif-maker_4_lnz9fe.gif" alt="Hero Image">
+    </div> -->
+    <div class="image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640260170/Frame_48095764_popqld.png" alt="Hero Image">
     </div>
+    
 </section>
 <section id="portfolio">
     <h2>Case Studies</h2>
     <div class="project">
         <div class="project-image">
             <a href="/the-new-age-hr-solution/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501331/Frame_48095736_awu318.png" alt="HR Solution Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258163/circle-hr-thumb_prlsq4.png" alt="HR Solution Thumbnail">
             </a>
         </div>
         <div class="content">
@@ -55,7 +59,7 @@
     <div class="project">
         <div class="project-image">
             <a href="/designing-live-health-and-fitness-classes/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640117993/play-thumbnail_tbf4ly.png" alt="Video Conf Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258436/circle-play-thumbnail_hey4xe.png" alt="Video Conf Thumbnail">
             </a>
         </div>
         <div class="content">
@@ -68,7 +72,7 @@
     <div class="project">
         <div class="project-image">
             <a href="/improved-video-classroom/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501331/Frame_48095737_styvf5.png" alt="Video Conf Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258353/circle-vc-thumbnail_qdzm32.png" alt="Video Conf Thumbnail">
             </a>
         </div>
         <div class="content">
@@ -83,7 +87,7 @@
     <div class="project">
         <div class="project-image">
             <a href="/gamification-revolution-in-childrens-learning/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501331/Frame_48095738_dmcokb.png" alt="Gamification Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258680/circle-game_g7xawm.png" alt="Gamification Thumbnail">
             </a>
         </div>
         <div class="content">
@@ -96,7 +100,7 @@
     <div class="project">
         <div class="project-image">
             <a href="/understanding-the-patient-journey/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501571/Frame_48095739_sb0h1m.png" alt="Practo Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258679/circle-practo_tyhm03.png" alt="Practo Thumbnail">
             </a>
         </div>
         <div class="content">
