--- a/gamification-revolution-in-childrens-learning/index.html
+++ b/gamification-revolution-in-childrens-learning/index.html
@@ -47,7 +47,7 @@
     
     <p>I was part of a four member team, insisting of two product managers, one UX writer, and me as the designer.</p>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639732725/Frame_48095747_wrx6bi.png" alt="">
         <span>The Team</span>
     </div>
@@ -74,12 +74,12 @@
         <li>Dota 2</li>
         <li>Clash Royale</li>
     </ul>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639030778/dota-2_xrqxsa.png" alt="">
         <span>Dota 2</span>
     </div>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639030750/clash-royale_lp7bcv.png" alt="">
         <span>Clash Royale</span>
     </div>
@@ -90,26 +90,26 @@
     <p>Student's were interested in science, space exploration, and travel</p>
     <p>Student's enjoyed playing games like Clash Royale, Fortnite, and Dota 2.</p>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639734533/persona_nb2qpg.png" alt="User Persona">
         <span>One of the User Personas</span>
     </div>
 
     <h2>Building Points into the System</h2>
     <p>Like any game, we first needed a basic currency unit. For us, it was points. Students get points when they do activities on the platform (such as attend a class, or complete an assignment). We wanted to find a good represention for points, as well as show how many points a student will get for each activity and use that as an incentive to get students to complete certain activities.</p>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639734860/points_nbt7r1.png" alt="">
         <span>Points Moodboard</span>
     </div>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639734930/points-variations_y8trtj.png" alt="">
         <span>Illustration Variations</span>
     </div>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649223/points-1_aeuhjf.png" alt="">
         <span>Showing points on various activity cards</span>
     </div>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649223/points-2_jgedma.png" alt="">
         <span>List of ways in which a student can earn points</span>
     </div>
@@ -133,17 +133,17 @@
         <li>Celebrate a student winning a badge</li>
     </ul>
     <p>I created a moodboard of badges we collected from the internet. I then had interview sessions with 10 students to see which styles they liked the most.</p>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737059/badges-1_nyifom.png" alt="Badges Moodboard">
         <span>Moodboard</span>
     </div>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737158/badges-4_jdy6ow.png" alt="Illustrations">
         <span>Illustrations made on Procreate</span>
     </div>
 
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639737053/badges-2_cu0hmv.png" alt="">
         <span>Showing Badge Rarity</span>
     </div>
@@ -169,7 +169,7 @@
     <p>There were two types of nudges we explored. First is a short nudge, simply indicating how far the student is from the next achievable badge.</p>
     <p>The second option shows the complete set of badges for a specific activity.</p>
     <p>We went ahead with the first option because we didn’t want to overwhelm the students with the full list.</p>
-    <div class="image-container">
+    <div class="image-container-small">
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1638649742/badges-3_ojzhzl.png" alt="">
         <span>Nudge Explorations</span>
     </div>
