--- a/improved-video-classroom/index.html
+++ b/improved-video-classroom/index.html
@@ -115,14 +115,14 @@
     </div>
 
     <h2>Wireframes</h2>
-    <p>We wireframed it in 3 parts,</p>
-    <ul>
+    <p>We wireframed it in 4 parts,</p>
+    <ol>
         <li>Teacher side - Basic Camera Configurations</li>
         <li>Teacher side - Breakout Rooms</li>
         <li>Teacher side - Teacher Slideshows</li>
-        <li>Teacher side - Monitoring Student Activities</li>
+        <!-- <li>Teacher side - Monitoring Student Activities</li> -->
         <li>Student Side - Complete Product</li>
-    </ul>
+    </ol>
 
     <h2>Teacher Side - Basic Camera Configurations</h2>
     <p>It was important that the teacher could always see all the students in the class.</p>
