--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@
 
 
 <section id="creative-coding" class="container-med">
-    <h2>I am a versitile product designer that is passionate about crafting products that have a positive impact on society.</h2>
+    <h2>I am a versatile product designer who is passionate about crafting products that have a positive impact on society.</h2>
     <!-- <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional. Click the projects to look at the code and other variations I've created using similar techniques.</p> -->
 </section>
 
