added grid links

--- a/creative-coding/index.html
+++ b/creative-coding/index.html
@@ -26,7 +26,11 @@
         
 <section id="creative-coding" class="container-med">
     <h2>Creating coding projects that I've crafted using Javascript.</h2>
-    <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional. Click the projects to look at the code and other variations I've created using similar techniques.</p>
+    <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional.</p>
+    <ul>
+        <li><a href="new.karanmhatre.com/playground/impossible-puzzle" target="_blank">Playground</a></li>
+        <li><a href="https://new.karanmhatre.com/grid-explorer" target="_blank">Grid Explorer</a></li>
+    </ul>
 </section>
 
 <section class="grid-projects">
