new case study edits

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="I have 9+ years of experience working with digital products, and I&#39;m currently working as a Lead Product Designer at Byjus.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
-    <title>Karan Mhatre - Product Designer, Berlin</title>
+    <title>Karan Mhatre - UX Product Designer, Berlin</title>
 </head>
 <body>
     <header>
@@ -27,7 +29,7 @@
 <section id="hero">
     <div class="content">
         <h2>Hello, I'm a Berlin based product designer.</h2>
-        <p>I have 9 years of experience working with digital products, and I'm currently working as a Lead Product Designer at Byjus.</p>
+        <p>I have 9+ years of experience working with digital products, and I'm currently working as a Lead Product Designer at Byjus.</p>
         <a href="/about">More about me</a>
     </div>
     <!-- <div class="image">
@@ -37,7 +39,7 @@
         <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639493972/ezgif.com-gif-maker_4_lnz9fe.gif" alt="Hero Image">
     </div> -->
     <div class="image">
-        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640260170/Frame_48095764_popqld.png" alt="Hero Image">
+        <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640260170/Frame_48095764_popqld.png" alt="Karan Mhatre">
     </div>
     
 </section>
@@ -45,45 +47,45 @@
     <h2>Case Studies</h2>
     <div class="project">
         <div class="project-image">
-            <a href="/the-new-age-hr-solution/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258163/circle-hr-thumb_prlsq4.png" alt="HR Solution Thumbnail">
+            <a href="/designing-an-employee-development-platform/">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258163/circle-hr-thumb_prlsq4.png" alt="Eubrics UX Design Thumbnail">
             </a>
         </div>
         <div class="content">
-            <p class="year">2020 - End to end design - Freelancing</p>
-            <h3><a href="/the-new-age-hr-solution/">End-to-end designs for a New-Age HR Solution</a></h3>
-            <p>I designed a HR Solution from ground-up with 2 co-founders. I was the sole designer on the project.</p>
-            <a href="/the-new-age-hr-solution/">Read more</a>
+            <p class="year">2020 - UX Design - Eubrics</p>
+            <h3><a href="/designing-an-employee-development-platform/">Designing an Employee Development Platform</a></h3>
+            <p>I designed a brand new desktop-based Employee Learning and Development Solution from the ground-up with the two co-founders.</p>
+            <a href="/designing-an-employee-development-platform/">Read more</a>
         </div>
     </div>
     <div class="project">
         <div class="project-image">
             <a href="/designing-live-health-and-fitness-classes/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258436/circle-play-thumbnail_hey4xe.png" alt="Video Conf Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258436/circle-play-thumbnail_hey4xe.png" alt="GOQii Play Product Design Thumbnail">
             </a>
         </div>
         <div class="content">
-            <p class="year">2017 - UX Design - GOQii</p>
-            <h3><a href="/designing-live-health-and-fitness-classes/">Delivering Live Health and Fitness Classes</a></h3>
-            <p>Designed and launched a Live Health and Fitness platform on GOQii Play and grew it to over 1M+ users over 1 year.</p>
+            <p class="year">2017 - UXDesign and Product - GOQii</p>
+            <h3><a href="/designing-live-health-and-fitness-classes/">Designing Live Online Health Class on mobile</a></h3>
+            <p>Designed and launched a Live Onlione Health and Fitness platform on the GOQii mobile app and grew it to over 500K users in 6 months.</p>
             <a href="/designing-live-health-and-fitness-classes/">Read more</a>
         </div>
     </div>
     <div class="project">
         <div class="project-image">
             <a href="/improved-video-classroom/">
-                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258353/circle-vc-thumbnail_qdzm32.png" alt="Video Conf Thumbnail">
+                <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1640258353/circle-vc-thumbnail_qdzm32.png" alt="Bjyu Classroom UX Design Thumbnail">
             </a>
         </div>
         <div class="content">
-            <p class="year">2021 - UX Design - WhiteHatJR (Now Byjus)</p>
-            <h3><a href="/improved-video-classroom/">Helping teachers effectively manage more students in a class</a></h3>
-            <p>Designed and launched a product that helped teachers manage 4-6 students in an online classroom.</p>
+            <p class="year">2021 - UxDesign - WhiteHatJR</p>
+            <h3><a href="/improved-video-classroom/">Designing an online classroom experience for teachers</a></h3>
+            <p>Redesigned an existing product experience to help teachers manage additional students in an online classroom.</p>
             <a href="/improved-video-classroom/">Read more</a>
         </div>
     </div>
 </section>
-<section id="portfolioSecondary">
+<!-- <section id="portfolioSecondary">
     <div class="project">
         <div class="project-image">
             <a href="/gamification-revolution-in-childrens-learning/">
@@ -110,7 +112,8 @@
             <a href="/understanding-the-patient-journey/">Read more</a>
         </div>
     </div>
-    <!-- <div class="project">
+</section> -->
+<!-- <div class="project">
         <div class="project-image">
             <a href="/building-goqii-india-health-quiz/">
                 <img src="https://res.cloudinary.com/dgksx9vlc/image/upload/v1639501696/Frame_48095740_yntw3s.png" alt="GOQii Thumbnail">
@@ -123,7 +126,6 @@
             <a href="/building-goqii-india-health-quiz/">Read more</a>
         </div>
     </div> -->
-</section>
     </main>
     <footer>
         <div class="social">
