--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </a>
         </div>
         <div class="content">
-            <p class="year">2017 - UXDesign and Product - GOQii</p>
+            <p class="year">2017 - UX Design and Product - GOQii</p>
             <h3><a href="/designing-live-health-and-fitness-classes/">Designing Live Online Health Class on mobile</a></h3>
             <p>Designed and launched a Live Onlione Health and Fitness platform on the GOQii mobile app and grew it to over 500K users in 6 months.</p>
             <a href="/designing-live-health-and-fitness-classes/">Read more</a>
@@ -78,7 +78,7 @@
             </a>
         </div>
         <div class="content">
-            <p class="year">2021 - UxDesign - WhiteHatJR</p>
+            <p class="year">2021 - UX Design - WhiteHatJR</p>
             <h3><a href="/improved-video-classroom/">Designing an online classroom experience for teachers</a></h3>
             <p>Redesigned an existing product experience to help teachers manage additional students in an online classroom.</p>
             <a href="/improved-video-classroom/">Read more</a>
