--- a/designing-live-health-and-fitness-classes/index.html
+++ b/designing-live-health-and-fitness-classes/index.html
@@ -55,7 +55,9 @@
     <p><b>Team:</b> The team comprised of a Market Researcher, a Graphic Designer, an android developer, one backend engineer, and me as a Product Manager / UX Designer.</p>
 
     <div class="embed">
-        <iframe width="640" height="315" src="https://www.youtube.com/embed/JykhAfouMZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video-container">
+            <iframe width="100%" src="https://www.youtube.com/embed/JykhAfouMZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <span>GOQii Play Promo Video</span>
     </div>
 
