--- a/designing-live-health-and-fitness-classes/index.html
+++ b/designing-live-health-and-fitness-classes/index.html
@@ -260,7 +260,7 @@
     <h2>Impact</h2>
     <p>Over 6 months we,</p>
     <ul>
-        <li>Helped users get healthy</li>
+        <li>Helped users become healthier</li>
         <li>Improved time spent on the GOQii app from 2 minutes to 7 minutes per day per active user.</li>
         <li>Improved Daily Active Users on GOQii by 12%</li>
         <li>Sold 1,000+ GOQii Play subscriptions</li>
