creative coding fix

--- a/creative-coding/index.html
+++ b/creative-coding/index.html
@@ -27,7 +27,7 @@
     </header>
     <main id="pageContent">
         
-<section id="creative-coding" class="container-med">
+<section class="content-section">
     <h2>Creating coding projects that I've crafted using Javascript.</h2>
     <p>Creative coding is a type of computer programming in which the goal is to create something expressive instead of something functional.</p>
     <ul>
